--- a/docs/splitter.css
+++ b/docs/splitter.css
@@ -37,6 +37,16 @@ button {
   color: #fff;
 }
 
+.footer {
+  background: #27333B;
+  border-radius: 4px;
+  padding: 20px;
+  font-size: xx-small;
+  text-align: center;
+  transition: all 0.2s;
+  margin: 0 auto;
+}
+
 .loader {
   display: block;
   margin-left: auto;
