--- a/docs/splitter.css
+++ b/docs/splitter.css
@@ -9,13 +9,6 @@ body {
   user-select: none;
 }
 
-.worklog {
-  height:120px;
-  border:1px solid #ccc;
-  overflow: auto;
-  font-size: x-small;
-}
-
 #wait-dialog {
     text-align: center;
 }
@@ -90,3 +83,59 @@ button {
   100% { transform: rotate(360deg); }
 }
 
+
+.tabs {
+    /*width: 600px;*/
+    margin: 1em auto;
+    background-color: #09F;
+    border-radius: 5px 5px 5px 5px;
+}
+
+ul#tabs-nav {
+    list-style: none;
+    margin: 0;
+    padding: 5px;
+    overflow: auto;
+    width: 100%;
+    text-align: center;
+}
+
+ul#tabs-nav li {
+    font-weight: bold;
+    margin-right: 2px;
+    padding: 8px 10px;
+    border-radius: 5px 5px 5px 5px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+ul#tabs-nav li:hover,
+ul#tabs-nav li.active {
+    background-color: #08E;
+}
+
+#tabs-nav li a {
+    text-decoration: none;
+    color: #FFF;
+}
+
+.tab-content {
+    padding: 10px;
+    border: 5px solid #09F;
+    background-color: #FFF;
+}
+
+.tab-contents {
+    padding: 10px;
+    margin: 0 auto;
+}
+
+#type {
+    width: 100%;
+    border: 1px solid #ccc;
+    text-align-last: center;
+}
+
+.section-title {
+    font-weight: bold;
+}
