adding test connectivity on load

--- a/docs/splitter.css
+++ b/docs/splitter.css
@@ -290,3 +290,8 @@ select {
 .text-muted {
 	background-color: lightgray;
 }
+
+#server-down-div {
+    color: orangered;
+    text-align: center;
+}
